관리자 정보 서블릿 생성, menu.jsp 디자인 변경
1. MyInfoServlet.java, /admin/myInfo.jsp 생성
2. LoginServlet.java 이름 변경
3. menu.jsp 디자인 변경 : <hr> 태그에 border 옵션 추가
4. myInfo.jsp에 Bootstrap Framework 적용

--- a/sakila/WebContent/css/style.css
+++ b/sakila/WebContent/css/style.css
@@ -21,6 +21,14 @@ main {
 	padding: 20px 10px 20px 10px;
 	background: #E0E0E0;
 }
+
+hr {
+	border: solid 1px gray;
+}
+
+.adminInfo-table td {
+	padding: 5px;
+}
 			
 @media only screen and (min-width: 768px) {
 	section .container {
